# Palworld-Palbox-Slot-Injector

./: .gitignore  README.md  blankpalslot.json  cleanup_compile.bat  cleanup_venv.bat  compile_exe.bat  config.ini  create_palbox_slot_injector_release.bat  inject_box_slots.cmd  inject_box_slots.py  inject_box_slots.spec  inject_box_slots_full.py  inject_box_slots_venv.cmd  injector_ui.py  pyproject.toml  requirements.txt  setup_venv.bat
