[tool.poetry]
name = "palworld-palbox-slot-injector"
version = "0.1.0"
description = "Palbox slot injector"
authors = ["Your Name <you@example.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
palworld-save-tools = "^0.18.0"
psutil = "^5.9.8"

[tool.poetry.group.dev.dependencies]
pyinstaller = {version="^6.3.0", python=">=3.10,<3.13"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
