[tool.poetry]
name = "palworld-palbox-slot-injector"
version = "3.0.0.0"
description = "Palbox slot injector"
authors = ["Your Name <you@example.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
palworld-save-tools = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = {version="^6.3.0", python=">=3.10,<3.13"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
